# Beacon

./: .gitignore  AGENTS.md  BEACON.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.en.md  README.md  SECURITY.md
config/: README.md
python-core/: README.md  pyproject.toml
python-core/tests/: heartbeat_terminal_contract_cases.py  test_agent_activation.py  test_agent_delegated_wake.py  test_agent_dispatch.py  test_agent_endpoint.py  test_agent_exchange.py  test_agent_exchange_request.py  test_agent_invocation.py  test_agent_invocation_record_schema.py  test_agent_invocation_record_store.py  test_agent_invocation_request_factory.py  test_agent_registration.py  test_agent_registration_state_store.py  test_agent_runtime_preflight.py  test_agent_session_discovery.py  test_agent_wake.py  test_checkpoint_phase_flow.py  test_claude_registered_session_activation.py  test_codex_registered_session_activation.py  test_context_management_profile.py  test_context_state_store.py  test_context_update_event_recorder.py  test_conversation_domain.py  test_conversation_store.py  test_core_settings.py  test_deterministic_model_provider.py  test_file_operation.py  test_file_operation_context_linker.py  test_file_operation_record_schema.py  test_file_operation_record_store.py  test_file_operation_request_factory.py  test_file_operation_service.py  test_final_answer_candidate.py  test_heartbeat_candidate_presentation.py  test_heartbeat_candidate_snapshot.py  test_heartbeat_convergence_profile.py  test_heartbeat_grading.py  test_heartbeat_outcome_snapshot.py  (+44 more)
(+273 files in other folders)
