[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-os-core"
dynamic = ["version"]
description = "Local multi-agent coordination runtime for Beacon."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]
authors = [{ name = "Beacon contributors" }]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = ["agents", "coordination", "local-first", "multi-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Iridium1024/Beacon"
Repository = "https://github.com/Iridium1024/Beacon"
Issues = "https://github.com/Iridium1024/Beacon/issues"

[project.scripts]
beacon = "agent_os.local_runtime:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "agent_os._version.__version__" }

[tool.setuptools.package-data]
agent_os = ["VERSION"]
